tests/miz/pass/parser/pass_parser_import_items_001.miz
import std.core, ..common as C, .utils;
import algebra.linear.{eigen, jordan};
theorem T: thesis;
