tests/miz/fail/parser/fail_parser_import_late_001.miz
theorem T: thesis;
import Late.Module;
theorem U: thesis;
